tests/ui/statics/issue-14227.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/issue-14227.rs:4:21
   |
LL | static CRASH: u32 = symbol;
   |                     ^^^^^^ cannot access extern static (DefId(0:4 ~ issue_14227[1133]::{extern#0}::symbol))

error[E0133]: use of extern static is unsafe and requires unsafe function or block
  --> $DIR/issue-14227.rs:4:21
   |
LL | static CRASH: u32 = symbol;
   |                     ^^^^^^ use of extern static
   |
   = note: extern statics are not controlled by the Rust type system: invalid data, aliasing violations or data races will cause undefined behavior

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0133.
For more information about an error, try `rustc --explain E0080`.
